fix the spacing

--- a/_sass/components/_viewport-block.scss
+++ b/_sass/components/_viewport-block.scss
@@ -5,9 +5,9 @@
   margin: 0;
 }
 
-.viewport-block-4 {
+.viewport-block-2 {
   width: 100vw;
-  height: 25vh;
+  height: 50vh;
   padding: 0;
   margin: 0;
 }
